--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nicholassuwirman.github.io/vr-website-vite",
+  "homepage": "http://nicholassuwirman.github.io/vr-website-vite",
   "name": "vr-website",
   "private": true,
   "version": "0.0.0",
